<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.HuntFragment">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/weapon_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:hintEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/season_layout"
    android:hint="@string/weapon">

    <Spinner
      android:id="@+id/weapon_select"
      style="@android:style/Widget.Holo.Light.Spinner"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />


  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/season_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:hintEnabled="true"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/weapon_layout"
    app:layout_constraintEnd_toEndOf="parent"
    android:hint="@string/date">

    <Spinner
      android:id="@+id/season_select"
      style="@android:style/Widget.Holo.Light.Spinner"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/unit"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/weapon_layout"
    app:layout_constraintEnd_toStartOf="@id/tag"
    android:text="@string/unit"
    />


  <TextView
    android:id="@+id/tag"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/unit"
    app:layout_constraintTop_toBottomOf="@id/weapon_layout"
    app:layout_constraintEnd_toStartOf="@id/application"
    android:text="@string/tag"
    />

  <TextView
    android:id="@+id/application"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/tag"
    app:layout_constraintTop_toBottomOf="@id/weapon_layout"
    app:layout_constraintEnd_toStartOf="@id/percentage"
    android:text="@string/app"
    />

  <TextView
    android:id="@+id/percentage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/application"
    app:layout_constraintTop_toBottomOf="@id/weapon_layout"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/odds"
    />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/data_table"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/unit"
  app:spanCount="4"/>



</androidx.constraintlayout.widget.ConstraintLayout>