<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/unit"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toStartOf="@id/tag"
    android:text="@string/unit"
    />


  <TextView
    android:id="@+id/tag"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/unit"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toStartOf="@id/application"
    android:text="@string/tag"
    />

  <TextView
    android:id="@+id/application"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/tag"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toStartOf="@id/percentage"
    android:text="@string/app"
    />

  <TextView
    android:id="@+id/percentage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:padding="4dp"
    app:layout_constraintStart_toEndOf="@id/application"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
