<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.HuntFragment">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/weapon_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/season_layout"
    android:hint="@string/weapon">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
      android:id="@+id/weapon_select"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:inputType="none"
      android:text="@string/weapon_select"
      />


  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/season_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/weapon_layout"
    app:layout_constraintEnd_toEndOf="parent"
    android:hint="@string/date">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
      android:id="@+id/season_select"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:inputType="none"
      android:text="@string/season_select"
      />

  </com.google.android.material.textfield.TextInputLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/data_table"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/weapon_layout"/>
  app:spanCount="3"/>

</androidx.constraintlayout.widget.ConstraintLayout>